# reheating

./: CMakeLists.txt  README.md
include/model/energy/: creation_decay.hpp
include/model/particles/: chi_particle.hpp  phi_particle.hpp  stiff_matter.hpp
include/parameters/: parameters.hpp
include/simulation/: simulation.hpp  simulation_manager.hpp
include/solvers/: equal_time_solver.hpp
include/utils/: integration.hpp  maximization.hpp  types.hpp
include/writers/: csv_writer.hpp  results_writer.hpp
src/: main.cpp  simulation.cpp
src/model/: energy_densities.cpp  energy_densities.hpp
src/model/energy/: creation_decay.cpp  creation_decay.hpp  energy_densities.cpp  energy_densities.hpp
src/model/particles/: chi_particle.cpp  chi_particle.hpp  phi_particle.cpp  phi_particle.hpp  stiff_matter.cpp  stiff_matter.hpp
src/parameters/: parameters.hpp
src/simulation/: simulation.cpp  simulation_manager.cpp
src/solvers/: equal_time_solver.cpp  equal_time_solver.hpp
src/utils/: types.hpp
src/writers/: csv_writer.cpp
tests/model/particles/: test_chi_particle.cpp  test_phi_particle.cpp
